# TopologyAPI

./: .gitignore  CMakeLists.txt  README.md
include/: component.hpp  topology.hpp  topologyapi.hpp
src/: component.cpp  main.cpp  topology.cpp  topologyapi.cpp
test/: get_remove_topology_test.cpp  query_topologies_test.cpp  read_write_topology_test.cpp  test_topology.cpp  test_topology.hpp
topologies/: top2.json
